--- a/.gitmodules
+++ b/.gitmodules
@@ -145,3 +145,6 @@
 [submodule "snowblocks/neovim/pack/editing/opt/vim-journal"]
 	path = snowblocks/neovim/pack/editing/opt/vim-journal
 	url = https://github.com/junegunn/vim-journal.git
+[submodule "snowblocks/neovim/pack/random/opt/vim-keysound"]
+	path = snowblocks/neovim/pack/random/opt/vim-keysound
+	url = https://github.com/skywind3000/vim-keysound.git
