--- a/snowblocks/neovim/snowblock.json
+++ b/snowblocks/neovim/snowblock.json
@@ -12,7 +12,7 @@
   },
   {
     "dependencies": [
-      { "name": "neovim", "cmd": "brew install neovim" },
+      { "name": "neovim", "cmd": "brew install neovim --head" },
       { "name": "neovim", "cmd": "pip2 install --upgrade neovim" },
       { "name": "neovim", "cmd": "pip3 install --upgrade neovim" },
       { "name": "neovim", "cmd": "gem install neovim" },
