--- a/.gitmodules
+++ b/.gitmodules
@@ -148,3 +148,6 @@
 [submodule "snowblocks/neovim/pack/random/opt/vim-keysound"]
 	path = snowblocks/neovim/pack/random/opt/vim-keysound
 	url = https://github.com/skywind3000/vim-keysound.git
+[submodule "snowblocks/neovim/pack/colorschemes/opt/space-vim-theme"]
+	path = snowblocks/neovim/pack/colorschemes/opt/space-vim-theme
+	url = https://github.com/liuchengxu/space-vim-theme.git
