--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -72,9 +72,21 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
   bind-key -r ">" swap-window -t +1
 # }}}
 
+# Panes options {{{
+  set -g pane-border-bg black
+  set -g pane-active-border-bg black
+
+  set -g pane-active-border-fg black
+  set -g pane-border-fg black
+
+  set -g display-panes-colour black
+  set -g display-panes-active-colour black
+# }}}
+
 set-option remain-on-exit on # keep new-window 'terminal command' open after the command exits 0
 
 # ── Status/Window settings ────────────────────────────────────────────────────────
+  setw -g clock-mode-colour "#002b36"
 
 # Status options {{{
   set-option -g status on
@@ -82,7 +94,22 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set-option -g status-justify "left"
   set-option -g status-left-length 500
   set-option -g status-right-length 500
+
+  # Colors {{{
+    set -g status-bg "#657b83"
+    set -g status-fg "#002b36"
+    set -g status-attr none
+  # }}}
 # }}}
+
+
+# Messages {{{
+  set -g message-fg white
+  set -g message-bg black
+  set -g message-command-fg white
+  set -g message-command-bg black
+# }}}
+
 
 # Window options {{{
   # window is only constrained in size if a smaller client is actively looking at it.
@@ -91,6 +118,24 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g renumber-windows on  # renumber windows when a window is closed
   set -g set-titles on                        # set terminal title
   set -g set-titles-string '#h ❐ #S ● #I #W'
+
+  # Format {{{
+    set -g window-status-separator " "
+    set -g window-status-format " #I:#W "
+    # set -g window-status-current-format "⌜#I:#W⌟"
+    set -g window-status-current-format " #I:#W "
+  # }}}
+
+  # Mode (window select / session sellect) {{{
+    set-window-option -g mode-fg white
+    set-window-option -g mode-bg black
+  # }}}
+
+  # Style {{{
+    set -g window-status-current-style fg='#fdf6e3',bg='#002b36',bold
+    set -g window-status-style fg='#002b36',bg='#657b83'
+    set -g window-status-activity-style fg='#002b36',bg='#657b83',bold
+  # }}}
 # }}}
 
 # status line {{{
@@ -121,7 +166,7 @@ set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin "tmux-plugins/tmux-sessionist"
 set -g @plugin "alexanderjeurissen/tmux-pomodoro"
 set -g @plugin "alexanderjeurissen/tmux-world-clock"
-set -g @plugin "alexanderjeurissen/sombre.tmux"
+# set -g @plugin "alexanderjeurissen/sombre.tmux"
 set -g @plugin "tmux-plugins/tmux-online-status"
 set -g @plugin "alexanderjeurissen/tmux-process-indicator"
 
@@ -135,3 +180,4 @@ run '~/.tmux/plugins/tpm/tpm'
 # NOTE: local version for debugging sombre.
 # source-file ~/git/open_source/sombre.tmux/sombre.conf
 # }}}
+# vim: foldmethod=marker:sw=2:foldlevel=10
