Added vim-scripts/AfterColors.vim to plugin group colorschemes/start

--- a/.gitmodules
+++ b/.gitmodules
@@ -157,3 +157,6 @@
 [submodule "snowblocks/neovim/pack/colorschemes/start/night-and-day"]
 	path = snowblocks/neovim/pack/colorschemes/start/night-and-day
 	url = https://github.com/nightsense/night-and-day.git
+[submodule "snowblocks/neovim/pack/colorschemes/start/AfterColors.vim"]
+	path = snowblocks/neovim/pack/colorschemes/start/AfterColors.vim
+	url = https://github.com/vim-scripts/AfterColors.vim.git
