Make tmux statusbar styling consistent with new editor / terminal colorscheme

--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -73,14 +73,14 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
 # }}}
 
 # Panes options {{{
-  set -g pane-border-bg black
-  set -g pane-active-border-bg black
+  set -g pane-border-bg default
+  set -g pane-active-border-bg default
 
-  set -g pane-active-border-fg black
-  set -g pane-border-fg black
+  set -g pane-active-border-fg "#d3d3e7"
+  set -g pane-border-fg "#d3d3e7"
 
-  set -g display-panes-colour black
-  set -g display-panes-active-colour black
+  set -g display-panes-colour "#d3d3e7"
+  set -g display-panes-active-colour "#d3d3e7"
 # }}}
 
 set-option remain-on-exit on # keep new-window 'terminal command' open after the command exits 0
@@ -96,18 +96,18 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set-option -g status-right-length 500
 
   # Colors {{{
-    set -g status-bg "#657b83"
-    set -g status-fg "#002b36"
+    set -g status-bg "#d3d3e7"
+    set -g status-fg "#655370"
     set -g status-attr none
   # }}}
 # }}}
 
 
 # Messages {{{
-  set -g message-fg white
-  set -g message-bg black
-  set -g message-command-fg white
-  set -g message-command-bg black
+  set -g message-fg "#d3d3e7"
+  set -g message-bg "#655370"
+  set -g message-command-fg "#d3d3e7"
+  set -g message-command-bg "#655370"
 # }}}
 
 
@@ -127,14 +127,14 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   # }}}
 
   # Mode (window select / session sellect) {{{
-    set-window-option -g mode-fg white
-    set-window-option -g mode-bg black
+    set-window-option -g mode-fg '#8c799f'
+    set-window-option -g mode-bg '#e2e0ea'
   # }}}
 
   # Style {{{
-    set -g window-status-current-style fg='#fdf6e3',bg='#002b36',bold
-    set -g window-status-style fg='#002b36',bg='#657b83'
-    set -g window-status-activity-style fg='#002b36',bg='#657b83',bold
+    set -g window-status-current-style fg='#e2e0ea',bg='#655370',bold
+    set -g window-status-style fg='#655370'
+    set -g window-status-activity-style fg='#655370',bold
   # }}}
 # }}}
 
@@ -150,8 +150,8 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 
   set -g @vpn_interface_name "utun1"
 
-  set-option -g status-left "#{pomodoro_status} "
-  set-option -g status-right " #{process_indicators} #{online_status} #(~/.scripts/vpn_status) #{world_clock_status} "
+  set-option -g status-left "#{pomodoro_status}"
+  set-option -g status-right " #{process_indicators} #{online_status} #(~/.scripts/vpn_status) | #(~/next_meeting) | #{world_clock_status} "
 # }}}
 
 # Tmux plugins {{{
