--- a/snowblocks/ssh/config
+++ b/snowblocks/ssh/config
@@ -1,3 +1,12 @@
 Host *
- AddKeysToAgent yes
- UseKeychain yes
+  AddKeysToAgent yes
+  UseKeychain yes
+
+Host gitlab.inverselink.com
+  HostName git.pdx1.inverselink.com
+  ProxyCommand duoconnect -host=%h:%p -relay=https://engineering-ssh.inverselink.com
+  IdentityFile ~/.ssh/id_h1
+
+Host github
+  HostName github.com
+  IdentityFile ~/.ssh/id_personal
