--- a/snowblocks/zsh/snowblock.json
+++ b/snowblocks/zsh/snowblock.json
@@ -2,23 +2,52 @@
   {
     "clean": [
       "~",
+      "/usr/share/zsh/site-functions",
       "~/.zplug"
     ]
   },
   {
     "dependencies": [
-      { "name": "zsh", "cmd": "brew install zsh" },
-      { "name": "ranger", "cmd": "brew install ranger" },
-      { "name": "fzf", "cmd": "brew install fzf" },
-      { "name": "terminal-notifier", "cmd": "brew install terminal-notifier" }
+      {
+        "name": "zsh",
+        "cmd": "brew install zsh"
+      },
+      {
+        "name": "ranger",
+        "cmd": "brew install ranger"
+      },
+      {
+        "name": "fzf",
+        "cmd": "brew install fzf"
+      },
+      {
+        "name": "terminal-notifier",
+        "cmd": "brew install terminal-notifier"
+      }
     ]
   },
   {
     "link": {
-      "~/.zshrc": { "relink": true },
-      "~/.zprofile": { "relink": true },
-      "~/.zshenv": { "relink": true },
-      "~/.zplug": { "relink": true }
+      "/usr/local/share/zsh/site-functions/completions": {
+        "create": true,
+        "relink": true
+      }
+    }
+  },
+  {
+    "link": {
+      "~/.zshrc": {
+        "relink": true
+      },
+      "~/.zprofile": {
+        "relink": true
+      },
+      "~/.zshenv": {
+        "relink": true
+      },
+      "~/.zplug": {
+        "relink": true
+      }
     }
   }
 ]
