Move to Dein.vim, solarized, and fix some small issue with vim config

--- a/snowblocks/neovim/coc-settings.json
+++ b/snowblocks/neovim/coc-settings.json
@@ -1,9 +1,19 @@
 {
   "suggest.echodocSupport": true,
   "suggest.maxCompleteItemCount": 20,
-  "coc.preferences.formatOnSaveFiletypes": ["javascript", "typescript", "typescriptreact", "json", "javascriptreact"],
+  "coc.preferences.formatOnSaveFiletypes": ["javascript", "typescript", "typescriptreact", "json", "javascriptreact", "ruby"],
+  "eslint.autoFixOnSave": true,
   "eslint.filetypes": ["javascript", "typescript", "typescriptreact", "javascriptreact"],
+
+  "solargraph.formatting": true,
+  "solargraph.completion": true,
+  "solargraph.definitions": true,
+  "solargraph.symbols": true,
+  "solargraph.hover": true,
+  "solargraph.references": true,
+
   "diagnostic.errorSign": "•",
   "diagnostic.warningSign": "•",
-  "diagnostic.infoSign": "•"
+  "diagnostic.infoSign": "•",
+  "diagnostic.checkCurrentLine": true
 }
