--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -76,17 +76,18 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
   set -g pane-border-bg default
   set -g pane-active-border-bg default
 
-  set -g pane-active-border-fg "#d3d3e7"
-  set -g pane-border-fg "#d3d3e7"
+  set -g pane-active-border-fg "#586e75"
+  set -g pane-border-fg "#586e75"
 
-  set -g display-panes-colour "#d3d3e7"
-  set -g display-panes-active-colour "#d3d3e7"
+  set -g display-panes-colour "#586e75"
+  set -g display-panes-active-colour "#586e75"
 # }}}
 
 set-option remain-on-exit on # keep new-window 'terminal command' open after the command exits 0
 
 # ── Status/Window settings ────────────────────────────────────────────────────────
-  setw -g clock-mode-colour "#002b36"
+
+  setw -g clock-mode-colour "#93a1a1"
 
 # Status options {{{
   set-option -g status on
@@ -94,20 +95,20 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set-option -g status-justify "left"
   set-option -g status-left-length 500
   set-option -g status-right-length 500
-
+# StatusLineNC   xxx cterm=reverse gui=reverse guifg=#586e75 guibg=#586e75
   # Colors {{{
-    set -g status-bg "#d3d3e7"
-    set -g status-fg "#655370"
+    set -g status-bg "#586e75"
+    set -g status-fg "#073642"
     set -g status-attr none
   # }}}
 # }}}
 
 
 # Messages {{{
-  set -g message-fg "#d3d3e7"
-  set -g message-bg "#655370"
-  set -g message-command-fg "#d3d3e7"
-  set -g message-command-bg "#655370"
+  set -g message-fg "#586e75"
+  set -g message-bg "#073642"
+  set -g message-command-fg "#586e75"
+  set -g message-command-bg "#073642"
 # }}}
 
 
@@ -132,15 +133,23 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   # }}}
 
   # Style {{{
-    set -g window-status-current-style fg='#e2e0ea',bg='#655370',bold
-    set -g window-status-style fg='#655370'
-    set -g window-status-activity-style fg='#655370',bold
+    set -g window-status-current-style fg='#e2e0ea',bg='#002b36',bold
+    set -g window-status-style fg='#073642'
+    set -g window-status-activity-style fg='#073642',bold
   # }}}
 # }}}
 
 # status line {{{
   set -g @online_icon " "
   set -g @offline_icon "#[bold]  OFFLINE #[nobold]"
+
+  set -g @pomodoro_duration 25
+  set -g @pomodoro_show_clock 'on_stop'
+  set -g @pomodoro_fg_color 'green'
+  set -g @pomodoro_bg_color 'blue'
+  # set -g @pomodoro_filled_glyph '█'
+  # set -g @pomodoro_empty_glyph '▒'
+  # set -g @pomodoro_active_glyph '█'
 
   set -g @world_clock_tz 'Europe/Amsterdam'
   set -g @world_clock_tz 'US/Pacific'
@@ -151,7 +160,7 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g @vpn_interface_name "utun1"
 
   set-option -g status-left "#{pomodoro_status}"
-  set-option -g status-right " #{process_indicators} #{online_status} #(~/.scripts/vpn_status) | #(~/next_meeting) | #{world_clock_status} "
+  set-option -g status-right " #{process_indicators} #{online_status} #(~/.scripts/vpn_status) |  #{world_clock_status} "
 # }}}
 
 # Tmux plugins {{{
