Move back to paper, tpope/vinegar, add fzf inline path complete

--- a/snowblocks/neovim/coc-settings.json
+++ b/snowblocks/neovim/coc-settings.json
@@ -11,6 +11,10 @@
   "solargraph.symbols": true,
   "solargraph.hover": true,
   "solargraph.references": true,
+  "codeLens.enable": true,
+  "solargraph.useBundler": true,
+
+  "svg.prettySvg": true,
 
   "diagnostic.errorSign": "•",
   "diagnostic.warningSign": "•",
