Remove some deprecated options and change colors to Paper

--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -73,21 +73,21 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
 # }}}
 
 # Panes options {{{
-  set -g pane-border-bg default
-  set -g pane-active-border-bg default
+  # set -g pane-border-bg cyan
+  # set -g pane-active-border-bg cyan
 
-  set -g pane-active-border-fg "#586e75"
-  set -g pane-border-fg "#586e75"
+  # set -g pane-active-border-fg magenta
+  # set -g pane-border-fg cyan
 
-  set -g display-panes-colour "#586e75"
-  set -g display-panes-active-colour "#586e75"
+  set -g display-panes-colour cyan
+  set -g display-panes-active-colour magenta
 # }}}
 
 set-option remain-on-exit on # keep new-window 'terminal command' open after the command exits 0
 
 # ── Status/Window settings ────────────────────────────────────────────────────────
 
-  setw -g clock-mode-colour "#93a1a1"
+  setw -g clock-mode-colour cyan
 
 # Status options {{{
   set-option -g status on
@@ -97,18 +97,18 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set-option -g status-right-length 500
 # StatusLineNC   xxx cterm=reverse gui=reverse guifg=#586e75 guibg=#586e75
   # Colors {{{
-    set -g status-bg "#586e75"
-    set -g status-fg "#073642"
-    set -g status-attr none
+    set -g status-bg default
+    set -g status-fg cyan
+    # set -g status-attr none
   # }}}
 # }}}
 
 
 # Messages {{{
-  set -g message-fg "#586e75"
-  set -g message-bg "#073642"
-  set -g message-command-fg "#586e75"
-  set -g message-command-bg "#073642"
+  # set -g message-fg cyan
+  # set -g message-bg magenta
+  # set -g message-command-fg cyan
+  # set -g message-command-bg magenta
 # }}}
 
 
@@ -128,25 +128,25 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   # }}}
 
   # Mode (window select / session sellect) {{{
-    set-window-option -g mode-fg '#8c799f'
-    set-window-option -g mode-bg '#e2e0ea'
+    # set-window-option -g mode-fg '#8c799f'
+    # set-window-option -g mode-bg '#e2e0ea'
   # }}}
 
   # Style {{{
-    set -g window-status-current-style fg='#e2e0ea',bg='#002b36',bold
-    set -g window-status-style fg='#073642'
-    set -g window-status-activity-style fg='#073642',bold
+    set -g window-status-current-style fg='#FFFFFF',bg='#d70087',bold
+    set -g window-status-style fg='#444444',bg='#bcbcbc'
+    set -g window-status-activity-style fg='#FFFFFF',bg='#005f87',bold
   # }}}
 # }}}
 
 # status line {{{
-  set -g @online_icon " "
+  set -g @online_icon "#[bold]  ONLINE #[nobold]"
   set -g @offline_icon "#[bold]  OFFLINE #[nobold]"
 
   set -g @pomodoro_duration 25
   set -g @pomodoro_show_clock 'on_stop'
   set -g @pomodoro_fg_color 'green'
-  set -g @pomodoro_bg_color 'blue'
+  set -g @pomodoro_bg_color 'cyan'
   # set -g @pomodoro_filled_glyph '█'
   # set -g @pomodoro_empty_glyph '▒'
   # set -g @pomodoro_active_glyph '█'
@@ -157,10 +157,8 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g @monitor_process 'mbsync'
   set -g @mbsync_process_template "#[bold]  PROCESS_NAME #[nobold]"
 
-  set -g @vpn_interface_name "utun1"
-
   set-option -g status-left "#{pomodoro_status}"
-  set-option -g status-right " #{process_indicators} #{online_status} #(~/.scripts/vpn_status) |  #{world_clock_status} "
+  set-option -g status-right " #{process_indicators} #{online_status} | #{world_clock_status} "
 # }}}
 
 # Tmux plugins {{{
