--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -18,7 +18,7 @@ set -g default-shell /bin/zsh
 # Enable true (24bit) colors for version >= 2.2
 # See https://deductivelabs.com/en/2016/03/using-true-color-vim-tmux/
 # https://medium.com/@dubistkomisch/how-to-actually-get-italics-and-true-colour-to-work-in-iterm-tmux-vim-9ebe55ebc2be
-# set -ga terminal-overrides ',tmux-256color-italic:Tc:sitm=\E[3m'
+set -ga terminal-overrides ',tmux-256color-italic:Tc:sitm=\E[3m'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 set -g base-index 1 # start with window 1 (instead of 0)
 set -g pane-base-index 1 # start with pane 1
@@ -73,14 +73,14 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
 # }}}
 
 # Panes options {{{
-  # set -g pane-border-bg cyan
-  # set -g pane-active-border-bg cyan
+  set -g pane-border-bg black
+  set -g pane-active-border-bg black
 
-  # set -g pane-active-border-fg magenta
-  # set -g pane-border-fg cyan
+  set -g pane-border-fg black
+  set -g pane-active-border-fg brightblack
 
-  set -g display-panes-colour cyan
-  set -g display-panes-active-colour magenta
+  set -g display-panes-colour black
+  set -g display-panes-active-colour brightblack
 # }}}
 
 set-option remain-on-exit on # keep new-window 'terminal command' open after the command exits 0
@@ -95,26 +95,26 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set-option -g status-justify "left"
   set-option -g status-left-length 500
   set-option -g status-right-length 500
-# StatusLineNC   xxx cterm=reverse gui=reverse guifg=#586e75 guibg=#586e75
+
   # Colors {{{
     set -g status-bg default
-    set -g status-fg cyan
-    # set -g status-attr none
+    set -g status-fg white
+    #TODO: set -g status-attr none
   # }}}
 # }}}
 
 
 # Messages {{{
-  # set -g message-fg cyan
-  # set -g message-bg magenta
-  # set -g message-command-fg cyan
-  # set -g message-command-bg magenta
+  set -g message-fg cyan
+  set -g message-bg brightblack
+  set -g message-command-fg cyan
+  set -g message-command-bg brightblack
 # }}}
 
 
 # Window options {{{
   # window is only constrained in size if a smaller client is actively looking at it.
-  setw -g aggressive-resize on
+  # setw -g aggressive-resize on
   setw -g automatic-rename on # rename window to reflect current program
   set -g renumber-windows on  # renumber windows when a window is closed
   set -g set-titles on                        # set terminal title
@@ -123,7 +123,6 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   # Format {{{
     set -g window-status-separator " "
     set -g window-status-format " #I:#W "
-    # set -g window-status-current-format "⌜#I:#W⌟"
     set -g window-status-current-format " #I:#W "
   # }}}
 
@@ -133,9 +132,9 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   # }}}
 
   # Style {{{
-    set -g window-status-current-style fg='#FFFFFF',bg='#d70087',bold
-    set -g window-status-style fg='#444444',bg='#bcbcbc'
-    set -g window-status-activity-style fg='#FFFFFF',bg='#005f87',bold
+    set -g window-status-current-style fg='black',bg='cyan',bold
+    set -g window-status-style fg='white',bg='brightblack'
+    # set -g window-status-activity-style fg='#FFFFFF',bg='#005f87',bold
   # }}}
 # }}}
 
@@ -163,7 +162,7 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 
 # Tmux plugins {{{
 set -g @plugin "tmux-plugins/tpm"
-set -g @plugin "tmux-plugins/tmux-resurrect"
+# set -g @plugin "tmux-plugins/tmux-resurrect"
 set -g @plugin "tmux-plugins/tmux-continuum"
 set -g @plugin "tmux-plugins/tmux-yank"
 set -g @plugin "tmux-plugins/tmux-copycat"
@@ -184,7 +183,8 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-# NOTE: local version for debugging sombre.
-# source-file ~/git/open_source/sombre.tmux/sombre.conf
+# Fixes iterm2 integration. Should go after "run '~/.tmux/plugins/tpm/tpm'"
+setw -g aggressive-resize off
+
 # }}}
 # vim: foldmethod=marker:sw=2:foldlevel=10
