--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -134,7 +134,7 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   # Style {{{
     set -g window-status-current-style fg='black',bg='cyan',bold
     set -g window-status-style fg='white',bg='brightblack'
-    # set -g window-status-activity-style fg='#FFFFFF',bg='#005f87',bold
+    set -g window-status-activity-style fg='#FFFFFF',bg='#005f87',bold
   # }}}
 # }}}
 
