--- a/snowblocks/terminal/alacritty.yml
+++ b/snowblocks/terminal/alacritty.yml
@@ -16,8 +16,8 @@ shell:
  program: /bin/zsh
  args:
    - --login
-   - -c
-   - 'tmux attach-session || exec tmux new-session && exit'
+   # - -c
+   # - 'tmux attach-session || exec tmux new-session && exit'
 
 window:
   # Window dimensions (changes require restart)
@@ -263,15 +263,6 @@ cursor:
 
 # Live config reload (changes require restart)
 live_config_reload: true
-
-# Shell
-#
-# You can set `shell.program` to the path of your favorite shell, e.g. `/bin/fish`.
-# Entries in `shell.args` are passed unmodified as arguments to the shell.
-#shell:
-#  program: /bin/bash
-#  args:
-#    - --login
 
 # Key bindings
 #
