--- a/snowblocks/neovim/plugin/dein.toml
+++ b/snowblocks/neovim/plugin/dein.toml
@@ -12,7 +12,7 @@ repo = 'Shougo/dein.vim'
   #   let g:gruvbox_contrast_light='soft'
 
   #   colorscheme gruvbox
-  #   set background=dark
+  #   set background=light
   # '''
 
   # [[plugins]]
@@ -24,11 +24,34 @@ repo = 'Shougo/dein.vim'
   # '''
 
   # [[plugins]]
-  # repo = 'cormacrelf/vim-colors-github'
+  # repo = 'zefei/cake16'
   # hook_post_source = '''
   #   syntax enable
-  #   colorscheme github
-  #   hi clear signcolumn
+  #   colorscheme cake16
+  #   set background=light
+  # '''
+
+  # [[plugins]]
+  # repo = 'NLKNguyen/papercolor-theme'
+  # hook_post_source = '''
+  #   syntax enable
+  #   let g:PaperColor_Theme_Options = {
+  #     \   'theme': {
+  #     \     'default.light': {
+  #     \       'allow_bold': 1,
+  #     \       'allow_italic': 1,
+  #     \     }
+  #     \   }
+  #     \}
+  #   colorscheme papercolor
+  #   set background=light
+  # '''
+
+  # [[plugins]]
+  # repo = 'andreypopp/vim-colors-plain'
+  # hook_post_source = '''
+  #   syntax enable
+  #   colorscheme plain
   #   set background=light
   # '''
 
@@ -38,8 +61,8 @@ repo = 'Shougo/dein.vim'
     syntax enable
     let g:solarized_extra_hi_groups=1
     let g:solarized_italics = 1
+
     colorscheme solarized8
-    set background=light
   '''
 
   # [[plugins]]
@@ -51,34 +74,59 @@ repo = 'Shougo/dein.vim'
   # '''
 
   # [[plugins]]
-  # repo='liuchengxu/space-vim-theme'
-  # hook_post_source = '''
-  #  "         \    syntax enable\n
-  #  "         \    colorscheme space_vim_theme\n
-  #  "         \    set background=light\n
-  # '''
-
-  # [[plugins]]
   # repo='rakr/vim-one'
   # hook_post_source = '''
-  #  "         \    syntax enable\n
-  #  "         \    let g:one_allow_italics = 1\n
-  #  "         \    colorscheme one\n
-  #  "         \    set background=light\n
+  #   syntax enable
+  #   let g:one_allow_italics = 1
+  #   colorscheme one
+  #   set background=light
   # '''
 
+  # [[plugins]]
+  # repo='junegunn/seoul256.vim'
+  # hook_post_source = '''
+  #   syntax enable
+  #   let g:seoul256_background = 252
+  #   colorscheme seoul256
+  # '''
 
   # [[plugins]]
-  # repo='mhartington/oceanic-next'
+  # repo='liuchengxu/space-vim-theme'
   # hook_post_source = '''
-  #  "         \    syntax enable\n
-  #  "         \    let g:oceanic_next_terminal_bold = 1\n
-  #  "         \    let g:oceanic_next_terminal_italic = 1\n
-  #  "         \    colorscheme OceanicNext\n
+  #    syntax enable
+  #    set background=light
+
+  #    let g:space_vim_italic = 1
+  #    let g:space_vim_italicize_strings = 1
+  #    let g:space_vim_plugin_hi_groups = 1
+
+  #    colorscheme space_vim_theme
   # '''
 
   [[plugins]]
   repo='tsiemens/vim-aftercolors'
+
+
+  [[plugins]]
+  repo='nightsense/night-and-day'
+  hook_post_source = '''
+    let g:nd_themes = [
+        \ ['sunrise+0',   'solarized8_high', 'light' ],
+        \ ['sunrise+1/2', 'solarized8_low', 'light' ],
+        \ ['sunset+0',    'solarized8_high', 'dark'  ],
+        \ ['sunset+1/3',  'solarized8_low',  'dark' ],
+        \ ]
+
+    " NOTE: Groningen
+    let g:nd_latitude = '55'
+
+    " NOTE: San Francisco
+    " let g:nd_latitude = '40'
+
+    " TODO: implement conditional setting of timeshift based on daylight saving
+    " time
+    let g:nd_timeshift = '0'
+  '''
 # }}}
 
 # PLUGINS: Core {{{
@@ -122,10 +170,11 @@ repo = 'Shougo/dein.vim'
   # NOTE: linting and autofix
 
   [[plugins]]
-  repo = 'Vigemus/nvimux'
+  repo = 'christoomey/vim-tmux-navigator'
+  # [[plugins]]
+  # repo = 'Vigemus/nvimux'
   # NOTE: Tmux like behaviour in neovim
 # }}}
-
 
 # PLUGINS: Editing {{{
   [[plugins]]
@@ -165,13 +214,23 @@ repo = 'Shougo/dein.vim'
   [[plugins]]
   repo = 'machakann/vim-highlightedyank'
   # NOTE: yank visual selections
+
+  [[plugins]]
+  repo = 'stefandtw/quickfix-reflector.vim'
+  # NOTE: Enables editing quickfix buffer
 # }}}
 
-# PLUGINS: Frontend {{{
+# PLUGINS: Frontend/Javascript {{{
   [[plugins]]
   repo = 'ap/vim-css-color'
   on_ft = ['css', 'scss', 'conf', 'javascript']
   # NOTE: yank visual selections
+
+  [[plugins]]
+  repo = 'billyvg/tigris.nvim'
+  on_ft = ['javascript', 'html.javascript']
+  # NOTE: semantic highlighting for javascript
+
 # }}}
 
 # PLUGINS: Ruby {{{
@@ -189,7 +248,6 @@ repo = 'Shougo/dein.vim'
   on_ft = ['ruby', 'cucumber']
   # NOTE: rails specific config and highlight
 # }}}
-
 
 # PLUGINS: Navigation {{{
   [[plugins]]
@@ -219,6 +277,10 @@ repo = 'Shougo/dein.vim'
   # NOTE: ...
 
   [[plugins]]
+  repo = 'gcmt/taboo.vim'
+  # NOTE: Tab rename utilities
+
+  [[plugins]]
   repo = 'airblade/vim-rooter'
   # NOTE: change vim root to vcs root when editing a file
 
@@ -231,7 +293,6 @@ repo = 'Shougo/dein.vim'
   on_map = '*'
   # NOTE: allows to use the * motion in visual mode
 # }}}
-
 
 # PLUGINS: Version Control {{{
   [[plugins]]
@@ -246,7 +307,6 @@ repo = 'Shougo/dein.vim'
   repo = 'tpope/vim-git'
   # NOTE: Vim runtime files and syntax highlighting
 # }}}
-
 
 # PLUGINS: Window Management {{{
   [[plugins]]
