--- a/snowblocks/neovim/plugin/dein.toml
+++ b/snowblocks/neovim/plugin/dein.toml
@@ -61,8 +61,6 @@ repo = 'Shougo/dein.vim'
     syntax enable
     let g:solarized_extra_hi_groups=1
     let g:solarized_italics = 1
-
-    colorscheme solarized8
   '''
 
   # [[plugins]]
@@ -109,14 +107,7 @@ repo = 'Shougo/dein.vim'
 
   [[plugins]]
   repo='nightsense/night-and-day'
-  hook_post_source = '''
-    let g:nd_themes = [
-        \ ['sunrise+0',   'solarized8_high', 'light' ],
-        \ ['sunrise+1/2', 'solarized8_low', 'light' ],
-        \ ['sunset+0',    'solarized8_high', 'dark'  ],
-        \ ['sunset+1/3',  'solarized8_low',  'dark' ],
-        \ ]
-
+  hook_add = '''
     " NOTE: Groningen
     let g:nd_latitude = '55'
 
@@ -126,6 +117,13 @@ repo = 'Shougo/dein.vim'
     " TODO: implement conditional setting of timeshift based on daylight saving
     " time
     let g:nd_timeshift = '0'
+
+    let g:nd_themes = [
+        \ ['sunrise+0',   'solarized8_high', 'light' ],
+        \ ['sunrise+2/3', 'solarized8_low', 'light' ],
+        \ ['sunset+0', 'solarized8_high', 'dark' ],
+        \ ['sunset+1/3',  'solarized8_low',  'dark' ]
+    \ ]
   '''
 # }}}
 
@@ -157,8 +155,8 @@ repo = 'Shougo/dein.vim'
   repo = 'tpope/vim-scriptease'
   # NOTE: A Vim plugin for making Vim plugins.
 
-  [[plugins]]
-  repo = 'neovim/nvim-lsp'
+  # [[plugins]]
+  # repo = 'neovim/nvim-lsp'
   # NOTE: Common configurations for Neovim Language Servers NOTE: commented out for now till this feature matures in Nvim core
 
   [[plugins]]
